# Reasoning-Agent-for-General-Purpose-Problem-Solving

./: README.md  base_result_eda.ipynb  main.ipynb  main.py  pyproject.toml  reasoning_agent.ipynb  requirements.txt
notebooks/: agent_eda.ipynb  base_result_eda.ipynb
prompts/: chain_of_thought.json
prompts/chain_of_thought/: system.txt  user.txt
prompts/react/: system.txt
prompts/self_refine/: system_feedback.txt  system_refine.txt
src/: __init__.py  agent.py  agent_tools.py  inference-algorithms.py  tools.py  utils.py
